--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "wp2",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "clean": "npm cache clear && rimraf -- dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/webpack": "^2.2.4",
-    "@types/express": "^4.0.35",
-    "ts-loader": "^2.0.0",
-    "typescript": "^2.1.5",
-    "webpack": "^2.2.1"
-  },
   "dependencies": {
     "express": "^4.14.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.35",
+    "rimraf": "^2.6.2",
+    "ts-loader": "^3.1.1",
+    "tslint": "^5.5.0",
+    "typescript": "^2.6.0",
+    "webpack": "^3.3.0"
   }
 }
