--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "inlineSources": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "allowJs": true,
+    "typeRoots": ["./node_modules/@types"]
   }
 }
