--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.14.1"
   },
   "devDependencies": {
-    "@types/express": "^4.0.35",
+    "lite-server": "^2.3.0",
     "rimraf": "^2.6.2",
     "ts-loader": "^3.1.1",
     "tslint": "^5.5.0",
