--- a/bs-config.json
+++ b/bs-config.json
@@ -4,6 +4,6 @@
         "./src/**/*.{html,htm,css,js}"
     ],
     "server": {
-        "baseDir": "./src/html5up-halcyonic/"
+        "baseDir": "./dist/src"
     }
 }
