--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./dist/src",
     "target": "es5",
     "lib": [
-      "es2015"
+      "es2015",
+      "dom",
     ],
     "module": "commonjs",
     "noImplicitAny": true,
@@ -11,10 +12,8 @@
     "removeComments": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "moduleResolution": "node",
     "sourceMap": true,
     "inlineSources": true,
-    "allowJs": true,
   },
   "include": [
     "src/**/*"
