--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,11 @@
             "type": "npm",
             "script": "start",
             "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "html",
+            "problemMatcher": []
         }
     ]
 }
