--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "rxjs": "^5.5.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "concurrently": "^3.5.1",
     "lite-server": "^2.3.0",
