--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "wp2",
+  "name": "knorex-backend",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "clean": "npm cache clear && rimraf -- dist"
+    "clean": "rimraf -- dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.1"
+    "@types/mongodb": "^3.0.7",
+    "express": "^4.14.1",
+    "mongodb": "^3.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
