--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "clean": "npm cache clear && rimraf -- dist"
+    "clean": "rimraf -- dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.16.3"
   },
   "devDependencies": {
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.16.0",
     "rimraf": "^2.6.2",
-    "ts-loader": "^3.1.1",
-    "tslint": "^5.5.0",
-    "typescript": "^2.6.0",
-    "webpack": "^3.3.0"
+    "ts-loader": "^5.2.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
